# fplstat-app

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  PHASE0_FINDINGS.md  README.md  mise.toml  phase0_api_exploration.py  prek.toml  pyproject.toml
.claude/: settings.json
.claude/skills/commit-changes/: SKILL.md
.claude/skills/python-project-management/: SKILL.md
.claude/skills/run-etl/: SKILL.md
.github/workflows/: etl.yml  tests.yml  web.yml
.streamlit/: config.toml
api/: db.py  main.py
app/: app.py  data.py  style.py
app/pages/: fdr_matrix.py  stats.py
db/functions/: player_history.sql  player_stats.sql
db/grants/: raw_schema.sql
db/migrations/: 001_create_teams.sql  002_create_gameweeks.sql  002_create_raw_tables.sql  003_create_players.sql  003_create_public_views.sql  004_create_player_gameweek_stats.sql  004_grant_raw_schema_access.sql  005_create_fixtures.sql  006_alter_player_gameweek_stats_fixture_pk.sql
db/tables/: raw.sql
db/views/: public.sql
etl/: pipeline.py
frontend/: README.md  pnpm-lock.yaml
frontend/src/lib/api/: client.ts  endpoints.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.ts  Header.svelte  layout.css
src/fplstat/: db.py  fpl_client.py  models.py  transforms.py
test/: README.md  test_api_contract.py
test/schemas/: bootstrap_elements.json  bootstrap_events.json  bootstrap_teams.json  element_summary_history.json  fixtures.json
web/: .env.example  README.md  package.json  pnpm-lock.yaml
web/src/lib/: data.ts  style.ts  supabase.ts
web/src/routes/: +page.svelte
(+14 files in other folders)
