[project]
name = "fplstat"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "supabase>=2.28.3",
    "tzdata>=2026.1",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.8",
]
